# RPG3D

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README.md  RPG.geany  RPG3D.geany  config.h  config.status  configure.ac  libtool
data/: Makefile  Makefile.am  blade.tga  brick.tga  ceramic.tga  concreate.tga  hud.tga  hueteotl.tga  ladydeath.tga  megatron.tga  rhino.tga  roof.tga  slith.tga  stone.tga  wall.tga  warrior.tga  wood.tga  yoko.tga
docs/: Makefile  Makefile.am  RLib.dia
src/: Makefile  Makefile.am  ai.c  engine.c  globals.h  hero.c  main.c  physic.c  render.c  resources.c  rpg  world.c
src/.deps/: ai.Po  engine.Po  hero.Po  main.Po  physic.Po  render.Po  resources.Po  world.Po
src/.libs/: lt-rpg  rpg
src/rlib/: Makefile  Makefile.am  console.c  desktop_vmode.c  font.c  game.c  image.c  material.c  mesh.c  modules.c  renderer.c  renderer_default.c  renderer_thread.c  resource_manager.c  rlib.h  surface.c  texture.c  utility.c  window.c
src/rlib/.libs/: librlib.lai
src/rlib/experimental/: actc.h  collision.c  framed_mesh.c  jpg.c  mesh.c  meshop.c
src/rlib/math3d/: collision.c  frustum.c  math3d.h  matrix.c
src/rlib/modules/md2/: md2.c  md2_normals.h
src/rlib/modules/tga/: tga.c
